[package]
name = "openapi_validator"
version = "0.1.0"
edition = "2021"

[dependencies]

openapi = { path= "../openapi" , default-features = false, features = ["json", "yaml"] }

serde = { version = "1.0.136", default-features = false, features = ["std", "derive"] }
serde_json = { version = "1.0.79", default-features = false, features = ["std"] }
serde_yaml = { version = "0.8.23", default-features = false }

httparse = "1.7.1"
jsonschema = "0.16.0"
url = "2.2.2"
anyhow = "1.0.61"
querystring = "1.1.0"

reqwest      = { version = "0.11.9", default-features = false, features = ["json", "multipart", "rustls-tls-webpki-roots"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.24"

[dev-dependencies]
pretty_assertions = "1.2.1"
lazy_static = "1.4.0"
